Closed Bug 584646 Opened 14 years ago Closed 14 years ago

JM: "Assertion failure: frame.stackDepth() == opinfo.stackDepth,"

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Unassigned)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(1 file)

switch (e) {
  case 2:
    k;
  case (-1):
  case 2:
}

asserts js debug shell on JM changeset 6347cf00d3ab with -m at Assertion failure: frame.stackDepth() == opinfo.stackDepth, at ../methodjit/Compiler.cpp:474
JSOP_TABLESWITCH consumes a Value, so the most recent FrameEntry must be popped.

The same bug also occurs for JSOP_LOOKUPSWITCH, so I fixed it there too.
Attachment #463456 - Flags: review?(dvander)
Attachment #463456 - Flags: review?(dvander) → review+
http://hg.mozilla.org/users/danderson_mozilla.com/moo/rev/5b16447a4cb3
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/bug584646.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: