[JAEGER] Fix TABLESWITCH, LOOKUPSWITCH. b=584646, r=dvander.